syntax = "proto3";

option java_package = "tech.talenthium.auth";
option java_outer_classname = "AuthServiceProto";
import "google/protobuf/timestamp.proto";



service AuthService {
  // Developer endpoints
  rpc GetDeveloperById (GetDeveloperByIdRequest) returns (DeveloperResponse);
  rpc GetDeveloperByUsername (GetDeveloperByUsernameRequest) returns (DeveloperResponse);

  // Recruiter endpoints
  rpc GetRecruiterById (GetRecruiterByIdRequest) returns (RecruiterResponse);
  rpc GetRecruiterByUsername (GetRecruiterByUsernameRequest) returns (RecruiterResponse);

  //Company endpoints
  rpc GetCompanyRecruiters(GetCompanyRequest) returns (CompanyResponse);
}

// Developer requests
message GetDeveloperByIdRequest {
  int64 developerId = 1;
}

message GetDeveloperByUsernameRequest {
  string username = 1;
}

// Recruiter requests
message GetRecruiterByIdRequest {
  int64 recruiterId = 1;
}

message GetRecruiterByUsernameRequest {
  string username = 1;
}

message GetCompanyRequest {
  int64 companyId = 1;
}

// Developer details
message DeveloperResponse {
  int64 developerId = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string phone = 5;
  google.protobuf.Timestamp dateOfBirth = 6;
  string avatar = 7;
  string role = 8;  // ROLE_DEVELOPER
  bool isActive = 9;
}

// Recruiter details
message RecruiterResponse {
  int64 recruiterId = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string phone = 5;
  google.protobuf.Timestamp dateOfBirth = 6;
  string avatar = 7;
  string role = 8;  // OWNER or MEMBER
  bool isActive = 9;
  CompanyInfo company = 10;
}

// Company details
message CompanyInfo {
  int64 companyId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string website = 5;
  string address = 6;
  string logoUrl = 7;
  string description = 8;
  string createdAt = 9;
}
message CompanyResponse {
  int64 companyId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string website = 5;
  string address = 6;
  string logoUrl = 7;
  string description = 8;
  repeated RecruiterInfo recruiters =  9;
}
// Recruiter info (for company recruiter list)
message RecruiterInfo {
  int64 recruiterId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string username = 5;
  string role = 6; // OWNER or MEMBER
  string avatar = 7;
}

